<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Greed</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="score">Poäng</string>
    <string name="total_score">Total poäng</string>
    <string name="save">Spara</string>
    <string name="button_score">Poäng</string>
    <string name="throw_">Kasta</string>


</resources>
