
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:gravity="center_vertical"
    >
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="122dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/txt_score"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/score" />

        <TextView
            android:id="@+id/txt_total_score"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/total_score" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></RelativeLayout>

    </LinearLayout>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"

            android:gravity="center"
            >
            <c11log.greed.die
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="10dp"
                android:onClick="diceClicked"
                android:id="@+id/one"/>
            <c11log.greed.die
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="10dp"
                android:onClick="diceClicked"
                android:id="@+id/two"/>
            <c11log.greed.die
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="10dp"
                android:onClick="diceClicked"
                android:id="@+id/three"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            >
            <c11log.greed.die
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="10dp"
                android:onClick="diceClicked"
                android:id="@+id/four"/>
            <c11log.greed.die
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="10dp"
                android:onClick="diceClicked"
                android:id="@+id/five"/>
            <c11log.greed.die
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="10dp"
                android:onClick="diceClicked"
                android:id="@+id/six"/>
        </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_gravity="center_horizontal"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/save"
            android:onClick="saveButtonClick"
            android:id="@+id/btn_save"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:id="@+id/btn_score"
            android:text="@string/button_score"
            android:onClick="scoreClicked"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/throw_"
            android:id="@+id/btn_throw"
            android:onClick="throwClicked"
            />
    </LinearLayout>
</LinearLayout>
